<resources>
    <string name="app_name">Task Manager</string>
    <string name="nz">Novi Zadatak</string>
    <string name="stat">Statistika</string>
    <string name="taskName">Naziv Zadatka</string>
    <string name="taskDesc">Opis Zadatka</string>
    <string name="podsetnik">Podseti me za 15 minuta</string>
    <string name="dodaj">Dodaj</string>
    <string name="izlaz">Odkazi</string>
    <string name="toast">Niste popunili sva polja</string>
    <string name="priority1">Visok prioritet zadatka</string>
    <string name="priority2">Srednji prioritet zadatka</string>
    <string name="priority3">Nizak prioritet zadatka</string>
    <string name="datum">Datum</string>
    <string name="naziv">Naziv Zadatka</string>
    <string name="Obrisi">Obrisi</string>
    <string name="Osvezi">Osvezi</string>
</resources>
