<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novi_zad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="rtrk.pnrs1.ra51_2014.NoviZadActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:text="@string/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="#0008ff"
                android:textAlignment="center"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"

                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/ime"
                android:layout_weight="1" />



            <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker2"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
            android:layout_weight="1" />



            <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
                android:timePickerMode="spinner"
            android:layout_weight="1" />

            <TextView
                android:text="@string/taskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#0008ff"
                android:id="@+id/textView1"
                android:layout_weight="1" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"

                android:textAlignment="center"
                android:ems="10"
                android:id="@+id/opis"
                android:layout_weight="1" />


            <CheckBox
                android:text="@string/podsetnik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_weight="1" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crveni"
                android:background="#ff0000"
                android:layout_weight="1" />
            <Button
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zuti"
                android:background="#ffe100"
                android:layout_weight="1" />
            <Button
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zeleni"
                android:background="#44ae0a"
                android:layout_weight="1" />

        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <Button
                android:text="@string/dodaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dodaj"

                android:layout_weight="1" />


            <Button
                android:text="@string/izlaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/izlaz"

                android:layout_weight="1" />


        </LinearLayout>



        </LinearLayout>




    </ScrollView>


</LinearLayout>
